--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: pwd
-    - run: action/checkout@v3
+    - run: actions/checkout@v3
     - run: chmod +x bash.sh
     - run: ./bash.sh
