--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
     steps:
     - run: echo "Hello World"
     - run: echo "Hello $name" # name is the env var name, we access it with $var
-    - run: echo "$Team_name beat $Team2_name:!!""
-    - run: echo "${{secrets.Germany_Bribe_Amount}"
+    - run: echo "$Team_name beat $Team2_name!!"
+    - run: echo "${{secrets.Germany_Bribe_Amount}}"
